Added footer 'From TheDeveloper'

--- a/app/design/frontend/TheDeveloper/BaseTheme/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/TheDeveloper/BaseTheme/Magento_Theme/layout/default.xml
@@ -16,5 +16,10 @@
         </referenceBlock>
 
         <referenceBlock name="report.bugs" remove="true"/>
+
+        <referenceContainer name="footer">
+            <block class="Magento\Framework\View\Element\Template" template="html/tothedeveloper.phtml"/>
+        </referenceContainer>
+
     </body>
 </page>
